--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,91 @@
+h1 {
+  font-size: 75px;
+  font-weight: bold;
+
+}
+
+h3 {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+i {
+  font-weight: bold;
+}
+
+img {
+  max-width: 500px;
+  border-radius: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px #222);
+}
+
+.footer {
+  text-align: center;
+  color: #678ECF;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  opacity: 0.8;
+  font-size: 18px;
+}
+
+.jumbotron{
+  border-radius: 6px;
+}
+
 #show-contact {
   display: none;
 
 }
+
+#logbook {
+
+}
+
+#show-log {
+  display: none;
+}
+
+button {
+  background-color: #678ECF;
+      border-radius: 4px;
+      border: none;
+      color: white;
+      text-align: center;
+      font-size: 13px;
+      font-weight: bold;
+      padding: 10px;
+      width: 150px;
+      transition: all 0.3s;
+      cursor: pointer;
+
+    }
+
+    button span {
+      cursor: pointer;
+      display: inline-block;
+      position: relative;
+      transition: 0.3s;
+    }
+
+    button span:after {
+      content: '\00bb';
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      right: -20px;
+      transition: 0.3s;
+    }
+
+    button:hover span {
+      padding-right: 20px;
+    }
+
+    button:hover span:after {
+      opacity: 1;
+      right: 0;
+    }
